# TransfoRNA

./: .gitignore  README.md  environment.x86_64-linux.yml  environment.yml  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_inference_api.py  train.sh
conf/: main_config.yaml
conf/hydra/job_logging/: custom.yaml
conf/inference_settings/: default.yaml
conf/model/: transforna.yaml
conf/train_model_configs/: custom.py  premirna.py  sncrna.py  tcga.py
kba_pipeline/: README.md  environment.yml
kba_pipeline/src/: annotate_from_mapping.py  make_anno.py  map_2_HBDxBase.py  precursor_bins.py  utils.py
scripts/: README.md  huggingface_transforna_model.ipynb  test_huggingface_transforna_model.ipynb  test_inference_api.py  test_inference_repo.py  train.sh
src/: main.py
src/configs/: main_config.yaml  readme.md
src/configs/inference_settings/: default.yaml
src/configs/model/: transforna.yaml
src/configs/train_model_configs/: premirna.py  sncrna.py  tcga.py
src/tcga_scripts/: readme.md
src/tcga_scripts/novelty_prediction/: id_vs_ood_entropy_clf.py  id_vs_ood_nld_clf.py
src/tcga_scripts/post transforna analysis/: art_vs_ood_clf.py  entropy_script.sh  id_vs_ood_lev_clf.py  lev_script.sh
src/transforna/: inference_api.py  inference_benchmark.py  inference_tcga.py  readme.md  tbWriter.py
src/transforna/callbacks/: LRCallback.py  criterion.py  metrics.py
src/transforna/dataset/: data_enriching.py  dataset_benchmark.py  dataset_tcga.py  seq_tokenizer.py
src/transforna/model/: model_components.py  skorchWrapper.py
src/transforna/novelty_prediction/: id_vs_ood_entropy_clf.py  id_vs_ood_nld_clf.py
src/transforna/processing/: augmentation.py  seq_tokenizer.py  splitter.py
src/transforna/score/: score.py
src/transforna/train/: train.py
src/transforna/utils/: energy.py  file.py  tcga_anndata_groupings.yaml  tcga_post_analysis_utils.py  utils.py
tests/: test_inference_api.py
transforna/: __init__.py  __main__.py
transforna/src/: __init__.py  readme.md
transforna/src/callbacks/: __init__.py  criterion.py  metrics.py  tbWriter.py
transforna/src/inference/: __init__.py  inference_api.py  inference_benchmark.py  inference_tcga.py
transforna/src/model/: __init__.py  model_components.py  skorchWrapper.py
transforna/src/novelty_prediction/: __init__.py  id_vs_ood_entropy_clf.py  id_vs_ood_nld_clf.py  nld_script.sh  readme.md  utlis.py
transforna/src/processing/: __init__.py  augmentation.py  huggingface_tokenizer.py  seq_tokenizer.py  splitter.py
transforna/src/score/: __init__.py  score.py
transforna/src/train/: train.py
transforna/src/utils/: __init__.py  file.py  logger.py  utils.py  (+1 more)
