[project]
name = "TransfoRNA"
version = "0.0.1"
description = "TransfoRNA: Navigating the Uncertainties of Small RNA Annotation with an Adaptive Machine Learning Strategy"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Yasser Taha", email = "ytaha@hb-dx.com" },{ name = "Julia Jehn", email = "jjehn@hb-dx.com"}]
dependencies = [
    "anndata==0.8.0",
    "dill==0.3.6",
    "hydra-core==1.3.0",
    "imbalanced-learn==0.9.1",
    "matplotlib==3.5.3",
    "numpy==1.22.3",
    "omegaconf==2.2.2",
    "pandas==1.5.2",
    "plotly==5.10.0",
    "PyYAML==6.0",
    "rich==12.6.0",
    "viennarna>=2.5.0a5",
    "scanpy==1.9.1",
    "scikit_learn==1.2.0",
    "skorch==0.12.1",
    "torch==1.10.1",
    "tensorboard==2.16.2",
    "Levenshtein==0.21.0",
    "huggingface_hub==0.23.3",
    "transformers==4.41.2",
    "setuptools==59.5.0"
]

[project.urls]
"Homepage" = "https://github.com/gitHBDX/TransfoRNA"

[tool.setuptools.package-data]
transforna = ["*.yaml"]

[tool.setuptools.packages.find]
where = ["TransfoRNA"]
include = ["*"]

[project.scripts]
"transforna" = "transforna.__main__:main"