[metadata]
name = transforna
version = 0.0.1
author = YasserTaha,JuliaJehn
author_email = tsikosek@hb-dx.com
description = TransfoRNA: deep-learning assisted annotation of small RNA sequencing reads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gitHBDX/TransfoRNA
project_urls =
    Bug Tracker = https://github.com/gitHBDX/TransfoRNA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src